--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,51 @@
-<h1>
-  {{title}}
-</h1>
+<div class="app-content">
+  <h1>{{title}}</h1>
+
+  <!-- Buttons -->
+  <md-card>
+    <button md-button>FLAT</button>
+    <button md-raised-button md-tooltip="This is a tooltip!">RAISED</button>
+    <button md-raised-button color="primary">PRIMARY RAISED</button>
+    <button md-raised-button color="accent">ACCENT RAISED</button>
+  </md-card>
+
+  <!-- Checkboxes -->
+  <md-card>
+    <md-checkbox>Unchecked</md-checkbox>
+    <md-checkbox [checked]="true">Checked</md-checkbox>
+    <md-checkbox [indeterminate]="true">Indeterminate</md-checkbox>
+    <md-checkbox [disabled]="true">Disabled</md-checkbox>
+  </md-card>
+
+  <!-- Radio Buttons -->
+  <md-card>
+    <md-radio-button name="symbol">Alpha</md-radio-button>
+    <md-radio-button name="symbol">Beta</md-radio-button>
+    <md-radio-button name="symbol" disabled>Gamma</md-radio-button>
+  </md-card>
+
+  <!-- Slider -->
+  <md-card>
+    <md-slider min="1" max="10" step="2"></md-slider>
+  </md-card>
+
+
+  <!-- Icons -->
+  <md-icon>fingerprint</md-icon>
+  <button md-icon-button>
+    <md-icon class="md-24">favorite</md-icon>
+  </button>
+  <button md-fab>
+    <md-icon class="md-24">fingerprint</md-icon>
+  </button>
+  <button md-mini-fab>
+    <md-icon class="md-24">add</md-icon>
+  </button>
+
+  <!-- Font awesome -->
+  <md-icon class="fa-2x" fontSet="fa" fontIcon="fa-birthday-cake"></md-icon>
+  <button md-raised-button>
+    <md-icon class="md-24 fa-lg" fontSet="fa" fontIcon="fa-camera-retro"></md-icon>
+    Say Cheez!
+  </button>
+</div>
